src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  color: #213547;
  background-color: #242424;
  background-color: #ffffff;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
}

#root {
  padding:23px;
  box-sizing: border-box;
  box-shadow:
    inset #19d4ff 0 0 0 5px,
    inset #18cdf7 0 0 0 1px,
    inset #53dfff 0 0 0 10px,
    inset #50d8f7 0 0 0 11px,
    inset #8ce9ff 0 0 0 16px,
    inset #88e2f7 0 0 0 17px,
    inset #c5f4ff 0 0 0 22px,
    inset #bfecf7 0 0 0 23px;
}

[onClick], a {
  cursor: pointer;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

dialog {
  z-index: 1;
  background: rgba(255, 255, 255, 0.4);
  backdrop-filter: blur(10px);
  header {
      >h1:first-of-type {
      margin-block-start: 0;
    }
        >button[aria-label="Close"] {
          float: right;
          margin: 0;
          padding: 0;
          border: none;
          background: none;
          font-size: 1.5em;
          cursor: pointer;
        }
    
        >button[aria-haspopup="menu"] {
          float: right;
          margin: 0;
          padding: 0;
          border: none;
          background: none;
          font-size: 1.5em;
          cursor: pointer;
        }
        }
  /* Portrait layout (mobile) */
  @media (max-aspect-ratio: 1) {
    top: 100px;
    left: 40px;
    > :first-child {
      margin-top: 0;
    }
  }
  /* Landscape layout (laptop / tablet ) */
  @media (min-aspect-ratio: 1) {
    top: 40px;
    left: 100px;
  }
}
/*** MENU BUTTON ***/
[aria-haspopup="menu"] {
  padding: 5px 10px;
  background: none;
  border: none;
  color: black;
  cursor: pointer;

  &:hover {
    color: blue;
  }

  &+menu,
  &+[role="menu"] {
    display: none;
    background-color: rgba(255, 255, 255, 0.9);
    border: 1px solid #ccc;
    border-radius: 4px;
    position: absolute;
    padding: 0;
    right: 0;
    margin: 2em 0 0;
    list-style-type: none;
    z-index: 1;

    /*** MENU ITEM ***/
    [role="menuitem"],
    li {
      white-space: nowrap;
      a {
        display: block;
        padding: .5em;
        text-decoration: none;
        color: black;
      }
    }
  }

  /* MENU ACTIVE */
  &[aria-expanded="true"] {

    &+menu,
    &+[role="menu"] {
      display: block;
    }
  }
}

